# cmake

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/compiler/: clang.cmake  gcc.cmake  msvc.cmake
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: main.cpp
