cmake_minimum_required(VERSION 3.22)

find_package(Doxygen
    REQUIRED dot
)

if(DOXYGEN_FOUND)
    # Available from: https://www.doxygen.nl/manual/config.html
    set(DOXYGEN_PROJECT_LOGO "${PROJECT_SOURCE_DIR}/assets/logo.png")
    set(DOXYGEN_INLINE_INHERITED_MEMB YES)
    set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
    set(DOXYGEN_EXTENSION_MAPPING "hpp=C++")
    set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
    set(DOXYGEN_INLINE_SIMPLE_STRUCTS YES)
    set(DOXYGEN_EXTRACT_PRIV_VIRTUAL YES)
    set(DOXYGEN_HIDE_FRIEND_COMPOUNDS YES)
    set(DOXYGEN_HIDE_IN_BODY_DOCS YES)
    set(DOXYGEN_CASE_SENSE_NAMES NO)
    set(DOXYGEN_SORT_MEMBER_DOCS NO)
    set(DOXYGEN_SORT_MEMBERS_CTORS_1ST YES)
    set(DOXYGEN_SORT_GROUP_NAMES YES)
    set(DOXYGEN_QUIET YES)
    set(DOXYGEN_WARN_NO_PARAMDOC YES)
    set(DOXYGEN_WARN_AS_ERROR YES)
    set(DOXYGEN_EXCLUDE_SYMLINKS YES)
    set(DOXYGEN_EXCLUDE_SYMBOLS "*::impl::*")
    set(DOXYGEN_EXAMPLE_PATH "${PROJECT_SOURCE_DIR}/doc/example")
    set(DOXYGEN_EXAMPLE_RECURSIVE YES)
    set(DOXYGEN_IMAGE_PATH "${PROJECT_SOURCE_DIR}/assets")
    set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "README.md")
    set(DOXYGEN_SOURCE_BROWSER YES)
    set(DOXYGEN_REFERENCED_BY_RELATION YES)
    set(DOXYGEN_REFERENCES_RELATION YES)
    set(DOXYGEN_HTML_COLORSTYLE_HUE 300)
    set(DOXYGEN_HTML_TIMESTAMP YES)
    set(DOXYGEN_GENERATE_TREEVIEW YES)
    set(DOXYGEN_USE_MATHJAX YES)
    set(DOXYGEN_INCLUDE_FILE_PATTERNS "*.hpp;*.h")
    set(DOXYGEN_UML_LOOK YES)
    set(DOXYGEN_TEMPLATE_RELATIONS YES)
    set(DOXYGEN_DOT_IMAGE_FORMAT "svg")
    set(DOXYGEN_INTERACTIVE_SVG YES)

    doxygen_add_docs(${PROJECT_NAME}_doxygen
        ${PROJECT_SOURCE_DIR}/src
        ${PROJECT_SOURCE_DIR}/include
        ${PROJECT_SOURCE_DIR}/README.md
        ${PROJECT_SOURCE_DIR}/LICENSE

        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}

        COMMENT "Generating Doxygen developer documentation for ${PROJECT_NAME}"
    )
else()
    message(WARNING "Could not find Doxygen")
endif()
